--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
-    "bootstrap": "^4.5.0",
     "react": "^16.13.0",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "^4.0.3",
+    "tailwindcss": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
